# ChangeLog for app-i18n/manpages-ja
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/manpages-ja/ChangeLog,v 1.28 2004/10/19 09:35:09 absinthe Exp $

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  manpages-ja-20040415.ebuild, manpages-ja-20040615.ebuild:
  Stable on amd64.

  27 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  manpages-ja-20040615.ebuild:
  Stable on sparc

*manpages-ja-20040915 (22 Sep 2004)

  22 Sep 2004; Akinori Hattori <hattya@gentoo.org>
  +manpages-ja-20040915.ebuild:
  version bump.

  22 Sep 2004; Akinori Hattori <hattya@gentoo.org>
  manpages-ja-20040615.ebuild:
  add ~ia64.

  05 Sep 2004; Guy Martin <gmsoft@gentoo.org> manpages-ja-20040615.ebuild:
  Stable on hppa.

  26 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> manpages-ja-20040615.ebuild:
  Stable on x86, alpha and ppc.

  06 Jul 2004; Joshua Kinard <kumba@gentoo.org> manpages-ja-20040615.ebuild:
  Marked stable on mips.

  26 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> :
  Marked stable on amd64.

  25 Jun 2004; Guy Martin <gmsoft@gentoo.org> manpages-ja-20040415.ebuild:
  Marked stable on hppa.

*manpages-ja-20040615 (19 Jun 2004)

  19 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> manpages-ja-20040415.ebuild,
  manpages-ja-20040615.ebuild:
  Version bumped. Added dispatch-conf(1) and g-cpan.pl(1)

  03 May 2004; Mamoru KOMACHI <usata@gentoo.org> manpages-ja-20040315.ebuild,
  manpages-ja-20040415.ebuild:
  Die if groff doesn't have multilingual support

*manpages-ja-20040415 (19 Apr 2004)

  19 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> manpages-ja-20031115.ebuild,
  manpages-ja-20031215.ebuild, manpages-ja-20040115.ebuild,
  manpages-ja-20040215.ebuild, manpages-ja-20040315.ebuild,
  manpages-ja-20040415.ebuild:
  Version bumped. Added ssl-cert.eclass.5. Marked 20040315 stable on all
  arches.  Removed old ebuilds.

  05 Apr 2004; Guy Martin <gmsoft@gentoo.org> manpages-ja-20040215.ebuild: