@@ -1,10 +1,6 @@
-MD5 39a14d5fc47ecaa5a19278870203d337 ChangeLog 4414
-MD5 440cc1f22128d6f38056fd73f3317448 manpages-ja-20040315.ebuild 1811
-MD5 2950a59e4338427687125f3ad3af5353 manpages-ja-20040415.ebuild 1815
-MD5 40f7fba6143d42bbed0ea598a7fbbc32 manpages-ja-20040615.ebuild 1872
+MD5 d693214401634c0a6e500a2824427702 manpages-ja-20040615.ebuild 1866
+MD5 dfa7792a19e99c5443a23c286728d00e ChangeLog 4687
+MD5 ad3f2d4511a33e6f04cf88a0854ccfd4 manpages-ja-20040915.ebuild 1923
 MD5 475629439c6cc71bc10ec394f4da68cf metadata.xml 566
-MD5 92924f8fb511262ccdce21aa4766b2ed manpages-ja-20040915.ebuild 1903
-MD5 c79ac537f5d0ad206c229185712d6e33 files/digest-manpages-ja-20040315 153
-MD5 75215fb4a3f1d57852e804e9ad6449c2 files/digest-manpages-ja-20040415 153
 MD5 fe1ea41c6d263adba6232159b147770c files/digest-manpages-ja-20040615 154
 MD5 0df2cea45b1b8531bcece297c9303154 files/digest-manpages-ja-20040915 153
