@@ -1,2 +1,0 @@
-MD5 b0a7e5c94714f4d5f42b8d97d971ed3d man-pages-ja-20040315.tar.gz 2960363
-MD5 379cb974b221fc1f20ee9f56b6549ca7 portage-manpages-ja-20040315.tar.gz 50578
