@@ -1,2 +1,0 @@
-MD5 38311e47aa80db5b377dab18b62f2806 man-pages-ja-20040415.tar.gz 2959922
-MD5 a8bf9241c6c3792857ab3b193747e85c portage-manpages-ja-20040415.tar.gz 51762
