@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/manpages-ja
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/manpages-ja/ChangeLog,v 1.28 2004/10/19 09:35:09 absinthe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/manpages-ja/ChangeLog,v 1.29 2004/11/04 04:00:49 usata Exp $
+
+  04 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
+  -manpages-ja-20040315.ebuild, -manpages-ja-20040415.ebuild,
+  manpages-ja-20040615.ebuild, manpages-ja-20040915.ebuild:
+  Blocks >=sys-apps/groff-1.19. Removed old ebuilds and marked
+  20040915 stable on x86, alpha and ppc.
 
   19 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
   manpages-ja-20040415.ebuild, manpages-ja-20040615.ebuild:
